Dependency Bundles, Sectioned Pagination API, Updates to Events API, Platform players, and more